# pdf-tools

./: README.md  pyproject.toml
src/merger/: merger.py
src/pdf_merger/: __init__.py  core.py
src/pdf_tools.egg-info/: PKG-INFO  SOURCES.txt
