[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-tools"
version = "0.1.0"
description = "A variety of Python PDF tools"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "GPL" }
authors = [
  { name = "Gwenael Birot", email = "gbirot@gmail.com" }
]
dependencies = [
  "pypdf>=6.9.2",
]

[tool.setuptools.packages.find]
where = ["src"]
